--- a/Tomi_webpage/resources/css/style.css
+++ b/Tomi_webpage/resources/css/style.css
@@ -8,6 +8,10 @@
     box-sizing: border-box;
 }
 
+*:focus {
+    outline: none;
+}
+
 html {
     background-color: #fff;
     color: #5f5f5f;
@@ -137,17 +141,20 @@ header {
 /* Buttons */
 
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit] {
     display: inline-block;
     text-decoration: none;
     padding: 10px 40px;
     font-weight: 300;
     border-radius: 200px;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
 
 .btn_full:link,
-.btn_full:visited {
+.btn_full:visited,
+input[type=submit] {
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #fff;
@@ -160,8 +167,11 @@ header {
 }
 
 .btn:hover,
-.btn:active {
-   background-color: #cf6d17; 
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active {
+   background-color: #cf6d17;
+   border: 1px solid #cf6d17;    
 }
 
 .btn_full:hover,
@@ -296,4 +306,28 @@ cite img {
 . box p {
     font-size: 90%;
     line-height: 145%;
+}
+
+/*----------------------------------------- */
+/* FORM */
+/*------------------------------------------*/
+
+.contact_form {
+    width: 60%;
+    margin: 40px auto 0px auto;
+}
+
+input[type=text],
+input[type=email],
+input[type=number],
+select,
+textarea {
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+textarea {
+    height: 100px;
 }
