--- a/Tomi_webpage/resources/css/queries.css
+++ b/Tomi_webpage/resources/css/queries.css
@@ -9,6 +9,8 @@
     }
     
     .row { padding: 0 2%; }
+    .row_form { padding: 2% 0;}
+
 }
 
 
@@ -18,6 +20,7 @@
     body { font-size: 18px; }
     section { padding: 60px 0; }
     .contact_form {width: 80%; }
+    .row_form { padding: 2% 0;}
 }
 
 
@@ -30,9 +33,40 @@
     .row,
     .main_text {padding: 0 4%; }
     
+    .row_form { padding: 2% 0;}
+    
     .col { width: 100%; }
     
     .main_nav { display: none; }
+    
+    .mobil_nav_icon { display: inline-block; }
+    
+    .main_nav {
+        float: left;
+        margin-top: 35px;
+        margin-left: 25px;
+        
+    }
+    
+    .main_nav li {
+        display: block;
+    }
+    
+    .main_nav li a:link,
+    .main_nav li a:visited {
+        display: block;
+        border: 0;
+        padding: 10px 0;
+        font-size: 100%;
+    }
+    
+    .sticky .main_nav { margin: 10px 0; }
+
+    .sticky .main_nav li a:link,
+    .sticky .main_nav li a:visited { padding: 10px 0; }
+    .sticky .mobil_nav_icon i { color: #555; }
+    .sticky .mobil_nav_icon { margin-top: 10px; }
+    
     
     h1 { font-size: 180%; }
     h2 { font-size: 150%; }
